refinando os textos

--- a/src/index.html
+++ b/src/index.html
@@ -46,12 +46,15 @@
             <div class="event__details">
                 <h2 class="event__details__title">Front-end</h2>
                 <p class="event__details__description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quasi beatae architecto libero
-                    eos? Sequi doloremque eius porro modi quia voluptas assumenda! Numquam, consectetur! Nisi sit non
-                    corporis porro harum!
+                    Desenvolvedores front-end são responsáveis por projetar e implementar a interface de websites e
+                    aplicativos, tornando-os visualmente atraentes e interativos. Utilizam tecnologias como HTML, CSS e
+                    JavaScript para garantir a usabilidade e a experiência do usuário. Essa profissão desempenha um
+                    papel crucial na web, unindo design e programação para criar plataformas que cativam e engajam os
+                    visitantes. #FrontEndDev #WebDesign
                 </p>
             </div>
-            <img class="event__image" src="./images/frontv2.png" alt="Front-end" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
+            <img class="event__image" src="./images/frontv2.png" alt="Front-end" data-aos="fade-up"
+                data-aos-anchor-placement="bottom-bottom">
         </div>
     </section>
     <section class="event event--ui-ux event--image-left">
@@ -59,12 +62,17 @@
             <div class="event__details">
                 <h2 class="event__details__title">UI/UX</h2>
                 <p class="event__details__description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quasi beatae architecto libero
-                    eos? Sequi doloremque eius porro modi quia voluptas assumenda! Numquam, consectetur! Nisi sit non
-                    corporis porro harum!
+                    O UI/UX Designer é um profissional especializado em criar a experiência do usuário (UX) e a
+                    interface do usuário (UI) em produtos digitais. Eles se concentram em entender as necessidades dos
+                    usuários, projetando interfaces intuitivas e funcionais que proporcionam uma experiência de alta
+                    qualidade. Isso envolve a criação de wireframes, protótipos e o uso de princípios de design para
+                    garantir que os produtos sejam atraentes e fáceis de usar. O UI/UX Designer desempenha um papel
+                    fundamental na criação de produtos digitais que atendem às expectativas dos usuários e alcançam o
+                    sucesso no mercado. #UIDesign #UXDesign
                 </p>
             </div>
-            <img class="event__image" src="./images/ui-ux.png" alt="Front-end" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
+            <img class="event__image" src="./images/ui-ux.png" alt="Front-end" data-aos="fade-up"
+                data-aos-anchor-placement="bottom-bottom">
         </div>
     </section>
     <section class="event event--data-science">
@@ -72,12 +80,13 @@
             <div class="event__details">
                 <h2 class="event__details__title">Data Science</h2>
                 <p class="event__details__description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quasi beatae architecto libero
-                    eos? Sequi doloremque eius porro modi quia voluptas assumenda! Numquam, consectetur! Nisi sit non
-                    corporis porro harum!
+                    O profissional de Data Science é um especialista em análise de dados, usando técnicas avançadas e
+                    programação para extrair insights e informação valiosa a partir de dados, ajudando as empresas a
+                    tomar decisões mais informadas e estratégicas. #DataScience
                 </p>
             </div>
-            <img class="event__image" src="./images/datav2.png" alt="Front-end" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
+            <img class="event__image" src="./images/datav2.png" alt="Front-end" data-aos="fade-up"
+                data-aos-anchor-placement="bottom-bottom">
         </div>
     </section>
     <section class="event event--backend event--image-left">
@@ -85,12 +94,15 @@
             <div class="event__details">
                 <h2 class="event__details__title">Back-end</h2>
                 <p class="event__details__description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quasi beatae architecto libero
-                    eos? Sequi doloremque eius porro modi quia voluptas assumenda! Numquam, consectetur! Nisi sit non
-                    corporis porro harum!
+                    O desenvolvedor back-end é responsável por criar e gerenciar a lógica e o funcionamento dos
+                    servidores e bancos de dados por trás de sites e aplicativos. Eles usam linguagens como Python, Java
+                    ou Ruby para garantir que os sistemas funcionem eficientemente, com segurança e escalabilidade. Os
+                    desenvolvedores back-end desempenham um papel fundamental na infraestrutura tecnológica que sustenta
+                    a experiência do usuário na web. #DesenvolvedorBackEnd #ProgramaçãoServerSide
                 </p>
             </div>
-            <img class="event__image" src="./images/backv2.png" alt="Front-end" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
+            <img class="event__image" src="./images/backv2.png" alt="Front-end" data-aos="fade-up"
+                data-aos-anchor-placement="bottom-bottom">
         </div>
     </section>
 
